Fix indicator line clipping

--- a/src/components/verification-grid-tile/css/style.css
+++ b/src/components/verification-grid-tile/css/style.css
@@ -50,8 +50,7 @@
 .vertically-fill {
   display: flex;
   flex-direction: column;
-  flex: 1 1;
-  /* min-height: 0px; */
+  flex: 1 1 0;
 }
 
 .figure-head {
